--- a/index.html
+++ b/index.html
@@ -2,3 +2,6 @@
 layout: home
 author_profile: true
 ---
+
+<h3 class="text-accent">About Me</h3>
+<p>I received my Ph.D. in mathematics in an area called Noncommutative Geometry.  Now, I teach math and science.  I'm especially interested in incorporating data science...</p>
